--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "electron": "13.0.0",
     "eslint": "^8.5.0",
     "typescript": "^4.5.4"
   },
