--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "noImplicitAny": true,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "outDir": "./dist",
     "declaration": true,
     "baseUrl": ".",
